fixed loading screen on mobiles

--- a/sass/base/_components.scss
+++ b/sass/base/_components.scss
@@ -46,14 +46,13 @@
   width: 100vw;
   height: 100vh;
   z-index: 9998;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   overflow: hidden;
 
   &::after{
     content: '';
-    position: absolute;
-    top: calc(50% - 30px);
-    left: calc(50% - 60px);
     z-index: 9999;
     width: 50px;
     height: 50px;
